--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "bugs": {
     "url": "https://wa.me/qr/6WHRKLU2IZNBB1"
   },
-  "homepage": "https://github.com/raselcomel/stikerinbot",
+  "homepage": "https://wa.me/qr/6WHRKLU2IZNBB1",
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.2",
     "awesome-phonenumber": "^2.54.0",
